# vicaya

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  justfile  pyproject.toml
data/: canon_book_map.csv  youtube_channels.md
kamma/: project.md  tech.md  workflow.md
runs/: 20260525-110000.md  20260526-090123.md  20260526-091517.md  20260526-180000.md  20260526-kasina-pre-buddhist-origins.md  20260527-092930.md  20260527-150000.md  20260527-153649.md  20260527-monks-bowl-sizes-addendum.md  20260528-hiri-ottappa.md  20260529-metta-translation-friendliness.md  20260529-sila-caritta-varitta-positive-dimension.md  20260529-silabbataparamasa.md  20260530-pali-path-terms-development.md  20260531-091930.md  20260601-025738.md  20260601-075124.md  20260602-110429.md  20260602-144756.md  20260602-213035.md  20260603-000323.md  20260603-002141.md  20260603-004752.md  20260603-042010.md  20260603-044210.md  20260603-044544.md  20260603-110800.md  20260603-120425.md  20260603-160500.md  20260603-225147.md  20260603-232301.md  20260604-002022.md  20260604-004624.md  20260604-004936.md  20260604-030305.md  20260604-032207.md  20260604-032539.md  20260604-034355.md  20260604-043355.md  20260604-060530.md  (+130 more)
scripts/: generate_note_pdf.py  install_hooks.py  migrate_env.py  sync_notes.py  sync_run_report.py  validate_note.py
tests/: test_align_translations.py  test_cross_check.py  test_folder_corpus.py  test_generate_note_pdf.py  test_library_folders.py  test_note_checks.py  test_research_sources.py  test_skill_routes.py  test_sync_notes.py  (+1 more)
(+170 files in other folders)
