[project]
name = "vicaya"
version = "0.1.0"
description = "A multi-source Pāḷi and Buddhist research workflow that runs as a Claude Code skill."
requires-python = ">=3.13"
dependencies = [
    "markdown>=3.10.2",
    "rich>=13.0.0",
    "weasyprint>=68.1",
    "youtube-transcript-api>=1.2.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
